2009-04-23  Claudio Saavedra  <csaavedra@igalia.com>

	* doc/hildon-sections.txt: Add the new API.
	* src/hildon-gtk.c (+hildon_gtk_window_set_portrait_flags): New
	method to set the portrait flags.
	* src/hildon-gtk.h: Add HildonPortraitFlags enum.

	Fixes: NB#112328 (Adding helpers for setting portrait properties)

2009-04-23  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-gtk.c (set_clear_window_flag): Add an Atom parameter,
	to allow using this method with other flags.
	(hildon_gtk_window_set_progress_indicator): Update accordingly.
	(hildon_gtk_window_set_do_not_disturb): Update accordingly.

2009-04-22  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-touch-selector.c
	(hildon_touch_selector_append_text_column):
	Make the cell renderer use the smallest width possible.

	Fixes: NB#108470 (Selected items in multiple selection are either
	having a tick that is cut or not visible at all.)

2009-04-22  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-touch-selector.c
	(hildon_touch_selector_append_text_column):
	Code cleanups

2009-04-22  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-number-editor.c (hildon_number_editor_real_set_value):
	Use g_strdup_printf() instead of a fixed size buffer.

2009-04-21  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c (hildon_app_menu_find_intruder):
	Close banners when a HildonAppMenu is popped up.

	Fixes: NB#111027 (Title menu closed immediately if activated when
	"Invalid e-mail address" banner is shown)

2009-04-21  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.66]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2009-04-20  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-banner.c (hildon_banner_realize):
	Mark HildonBanner as supporting portrait mode.
	Use GDK to set window properties insetad of direct Xlib calls.

	Fixes: NB#111830 (HildonBanner should be marked as supporting
	portrait)

2009-04-20  Alberto Garcia  <agarcia@igalia.com>
